--- a/SSISSpeechToText/SpeechToTextForm.resx
+++ b/SSISSpeechToText/SpeechToTextForm.resx
@@ -120,6 +120,12 @@
   <metadata name="ToolTipSpeechToText.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="RTBAbout.Text" xml:space="preserve">
+    <value>Speech to Text
+© Keith Martin 2018
+Provides the ability to read recorded sound files from the file system, and send them to Microsoft Cognitive Services, Bing Speech API.
+If you have stereo recordings, with one channel per person, then these can be processed separately, with timecodes added to indicate the start time of each persons speech.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
